update admin-revision-finishing and restructure

--- a/pages/login/assets/login.css
+++ b/pages/login/assets/login.css
@@ -10,7 +10,7 @@ body{
 }
 .main{
 	width: 350px;
-	height: 550px;
+	height: 500px;
 	background: red;
 	overflow: hidden;
 	background: url("https://doc-08-2c-docs.googleusercontent.com/docs/securesc/68c90smiglihng9534mvqmq1946dmis5/fo0picsp1nhiucmc0l25s29respgpr4j/1631524275000/03522360960922298374/03522360960922298374/1Sx0jhdpEpnNIydS4rnN4kHSJtU1EyWka?e=view&authuser=0&nonce=gcrocepgbb17m&user=03522360960922298374&hash=tfhgbs86ka6divo3llbvp93mg4csvb38") no-repeat center/ cover;
@@ -35,13 +35,24 @@ label{
 	cursor: pointer;
 	transition: .5s ease-in-out;
 }
+.signup label{
+	color: #fff;
+	font-size: 2.3em;
+	justify-content: center;
+	display: flex;
+	margin: 30px;
+	margin-top: 50px;
+	font-weight: bold;
+	cursor: pointer;
+	transition: .5s ease-in-out;
+}
 input{
 	width: 60%;
 	height: 20px;
-	background: #e0dede;
+	background: #e3cef0;
 	justify-content: center;
 	display: flex;
-	margin: 20px auto;
+	margin: 10px auto;
 	padding: 10px;
 	border: none;
 	outline: none;
